--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@editorjs/attaches": "^1.3.2",
+    "@editorjs/code": "^2.9.4",
+    "@editorjs/editorjs": "^2.31.1",
+    "@editorjs/embed": "^2.8.0",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/image": "^2.10.3",
+    "@editorjs/inline-code": "^1.5.2",
+    "@editorjs/link": "^2.6.2",
+    "@editorjs/list": "^2.0.9",
+    "@editorjs/quote": "^2.7.6",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
